[project]
name = "fice-feedback-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Volodymyr Klimchuk", email = "klimchuk.volodymyr@lll.kpi.ua" }
]
dependencies = [
    "aiogram>=3.0.0b7",
    "python-dotenv==1.0.0",
    "pydantic==1.10.5",
    "fluent-runtime==0.3.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_feedback_bot"]
